force-app/main/default/objects/ServiceAppointment/fields/AutoSendServiceReport__c.field-meta.xml
<CustomField>
    <fullName>AutoSendServiceReport__c</fullName>
    <description>deprecated and is no longer used in code logic</description>
    <formula>!ServiceReportAlreadySent__c &amp;&amp; (!Signature_Required__c || Customer_Signature_Captured__c) &amp;&amp;(TEXT(Line_Of_Business__c ) = $Setup.Field_Service_Settings__c.Pest_LOB__c || ( Account__r.Require_Service_Reports__c &amp;&amp; (TEXT(Line_Of_Business__c) = $Setup.Field_Service_Settings__c.Hygiene_LOB__c || TEXT(Line_Of_Business__c) = $Setup.Field_Service_Settings__c.Chemical_LOB__c || TEXT(Line_Of_Business__c) = $Setup.Field_Service_Settings__c.Life_Safety_LOB__c ))) 

/* This logic is dependent on Signature Requirements, a Service Report is only sent automatically if signature captured checkbox is true for customers who require signature*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutoSendServiceReport</label>
    <type>Checkbox</type>
</CustomField>