force-app/main/default/objects/ServiceAppointment/fields/Barcodes_Scanned_Out__c.field-meta.xml
<CustomField>
    <fullName>Barcodes_Scanned_Out__c</fullName>
    <label>Barcodes Scanned Out</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>