force-app/main/default/objects/ServiceAppointment/fields/CongaServiceAppointmentEmail__c.field-meta.xml
<CustomField>
    <fullName>CongaServiceAppointmentEmail__c</fullName>
    <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;queryid=[wo]&quot;+$Setup.Field_Service_Settings__c.ServiceAppointmentParentQueryId__c+&quot;,[wor]&quot;+$Setup.Field_Service_Settings__c.WorkOrderRoomQueryId__c+&quot;?pv0={QVar0},[con]&quot;+$Setup.Field_Service_Settings__c.ContactEmailQueryId__c+&quot;,[role]&quot;+$Setup.Field_Service_Settings__c.ContactRoleQueryId__c+&quot;?pv0=&quot;+Account__c+
&quot;&amp;congaemailtemplateid=&quot;+$Setup.Field_Service_Settings__c.CongaEmailTemplateId__c+
&quot;&amp;qvar0id=&quot;+$Setup.Field_Service_Settings__c.ServiceAppointmentParentQueryId__c+
&quot;&amp;qvar1id=&quot;+$Setup.Field_Service_Settings__c.ContactRoleQueryId__c+&quot;?pv0=&quot;+Account__c+
&quot;&amp;emailfromid=&quot;+$Setup.Field_Service_Settings__c.Customer_Success_OWA_Id__c+
&quot;&amp;emailtoid=&quot;+ContactId+
&quot;&amp;emailcc={QVar1}&quot;+
&quot;&amp;qmode=SendEmail&quot;+
&quot;&amp;DS7=3&quot;+
&quot;&amp;AC0=1&quot;+
&quot;&amp;AC1=Service+Appointment+Email+Notification+Sent&quot;+
&quot;&amp;SC0=1&quot;+
&quot;&amp;OCNR=1&quot;+
&quot;&amp;APIMode=12&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CongaServiceAppointmentEmail</label>
    <type>Text</type>
</CustomField>