force-app/main/default/objects/ServiceAppointment/fields/Customer_Accpac_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accpac_Number_Formula__c</fullName>
    <description>created to satisfy business requirement -- display accpac # with different field label that can be used on Delivery Service Reports</description>
    <formula>Account__r.AccPac_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account #</label>
    <type>Text</type>
</CustomField>