force-app/main/default/objects/ServiceAppointment/fields/Customer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Formula__c</fullName>
    <description>created to satisfy business requirement -- display account name with different field label that can be used on Delivery Service Reports</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>