force-app/main/default/objects/ServiceAppointment/fields/Customer_Notification_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Time__c</fullName>
    <label>Customer Notification Time</label>
    <type>DateTime</type>
</CustomField>