force-app/main/default/objects/ServiceAppointment/fields/DueDateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>DueDateTimeValue__c</fullName>
    <formula>TIMEVALUE( DueDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DueDateTimeValue</label>
    <type>Time</type>
</CustomField>