force-app/main/default/objects/ServiceAppointment/fields/EarliestStartTimeValue__c.field-meta.xml
<CustomField>
    <fullName>EarliestStartTimeValue__c</fullName>
    <formula>TIMEVALUE( EarliestStartTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EarliestStartTimeValue</label>
    <type>Time</type>
</CustomField>