force-app/main/default/objects/ServiceAppointment/fields/Fields_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Fields_For_Reporting__c</fullName>
    <description>Cluster of fields to be used in a report&apos;s grouping column to improve installation dispatching efficiency.
See CR:  https://trello.com/c/PU33egVT/334-enhancements-to-installation-sa-reporting-todd</description>
    <formula>TEXT(Type__c)&amp;&quot;  |  &quot;&amp;  Account_Name__c &amp;&quot;  |  &quot;&amp; State &amp;&quot;, &quot;&amp; City &amp;&quot;, &quot;&amp;  PostalCode &amp;&quot;  |  &quot;&amp; Street &amp; &quot; | &quot; &amp; HYPERLINK(&quot;/&quot; &amp; Id , AppointmentNumber)</formula>
    <label>Fields For Reporting</label>
    <type>Text</type>
</CustomField>