force-app/main/default/objects/ServiceAppointment/fields/Has_Resource_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Has_Resource_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Resource Assigned</label>
    <type>Checkbox</type>
</CustomField>