force-app/main/default/objects/ServiceAppointment/fields/HasBeenRescheduled__c.field-meta.xml
<CustomField>
    <fullName>HasBeenRescheduled__c</fullName>
    <formula>NOT( ISBLANK( Reschedule_Counter__c ) )</formula>
    <label>HasBeenRescheduled</label>
    <type>Checkbox</type>
</CustomField>