force-app/main/default/objects/ServiceAppointment/fields/ID_casesafe__c.field-meta.xml
<CustomField>
    <fullName>ID_casesafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (casesafe)</label>
    <type>Text</type>
</CustomField>