force-app/main/default/objects/ServiceAppointment/fields/Is_Pest_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Pest_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pest Emergency</label>
    <type>Checkbox</type>
</CustomField>