force-app/main/default/objects/ServiceAppointment/fields/Is_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>*******READ THIS******** If the logic that sets this value is changed (currently done via ServiceAppointmentSignatureUtilities) then you must also make the same logic change on the formula field here: WorkOrder.Signature_Required__c</description>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>