force-app/main/default/objects/ServiceAppointment/fields/isDelivery__c.field-meta.xml
<CustomField>
    <fullName>isDelivery__c</fullName>
    <formula>TEXT(Type__c  ) = $Setup.Field_Service_Settings__c.Label_for_Delivery_Work_Type__c</formula>
    <label>isDelivery</label>
    <type>Checkbox</type>
</CustomField>