force-app/main/default/objects/ServiceAppointment/fields/IsDispatched__c.field-meta.xml
<CustomField>
    <fullName>IsDispatched__c</fullName>
    <formula>NOT(TEXT(StatusCategory) = &apos;None&apos;)  &amp;&amp;  NOT(TEXT(StatusCategory) = &apos;Scheduled&apos;) &amp;&amp;  NOT(TEXT(StatusCategory) = &apos;Canceled&apos;) &amp;&amp; NOT( ISBLANK( SchedStartTime ) ) &amp;&amp;  NOT( ISBLANK(  SchedEndTime  ) )</formula>
    <label>IsDispatched</label>
    <type>Checkbox</type>
</CustomField>