force-app/main/default/objects/ServiceAppointment/fields/isHygiene__c.field-meta.xml
<CustomField>
    <fullName>isHygiene__c</fullName>
    <formula>TEXT( Line_Of_Business__c )  =  $Setup.Field_Service_Settings__c.Hygiene_LOB__c
&amp;&amp; NOT(isInstallation__c) 
&amp;&amp; NOT(isDelivery__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isHygiene</label>
    <type>Checkbox</type>
</CustomField>