force-app/main/default/objects/ServiceAppointment/fields/isHygiene_LifeSafety__c.field-meta.xml
<CustomField>
    <fullName>isHygiene_LifeSafety__c</fullName>
    <formula>(TEXT( Line_Of_Business__c )  =  $Setup.Field_Service_Settings__c.Life_Safety_LOB__c  || TEXT( Line_Of_Business__c )  =  $Setup.Field_Service_Settings__c.Hygiene_LOB__c)
&amp;&amp; NOT(isInstallation__c) 
&amp;&amp; NOT(isDelivery__c)
&amp;&amp; NOT(FSL__Emergency__c) 
&amp;&amp; NOT(ISPICKVAL(Status, &quot;Missed Service&quot;))</formula>
    <label>isHygiene/LifeSafety</label>
    <type>Checkbox</type>
</CustomField>