force-app/main/default/objects/ServiceAppointment/fields/IsInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsInProgress__c</fullName>
    <formula>TEXT( Status ) = &apos;On Route&apos; || TEXT( Status ) = &apos;On Site&apos; || TEXT( Status ) = &apos;In Progress&apos; || TEXT( Status ) = &apos;On Hold&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsInProgress</label>
    <type>Checkbox</type>
</CustomField>