force-app/main/default/objects/ServiceAppointment/fields/isInstallation__c.field-meta.xml
<CustomField>
    <fullName>isInstallation__c</fullName>
    <formula>TEXT(Type__c ) = $Setup.Field_Service_Settings__c.Label_for_Install_Work_Order_Type__c</formula>
    <label>isInstallation</label>
    <type>Checkbox</type>
</CustomField>