force-app/main/default/objects/ServiceAppointment/fields/isLifeSafety__c.field-meta.xml
<CustomField>
    <fullName>isLifeSafety__c</fullName>
    <formula>TEXT( Line_Of_Business__c )  =  $Setup.Field_Service_Settings__c.Life_Safety_LOB__c
&amp;&amp; NOT(isInstallation__c) 
&amp;&amp; NOT(isDelivery__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLifeSafety</label>
    <type>Checkbox</type>
</CustomField>