force-app/main/default/objects/ServiceAppointment/fields/isManuallySelected__c.field-meta.xml
<CustomField>
    <fullName>isManuallySelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>use this field to restrict the SAs that will be used in an upcoming optimization.</description>
    <label>isManuallySelected</label>
    <type>Checkbox</type>
</CustomField>