force-app/main/default/objects/ServiceAppointment/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <formula>TEXT(StatusCategory) = &apos;None&apos; || 
TEXT(StatusCategory) = &apos;Scheduled&apos; ||
TEXT(StatusCategory) = &apos;Dispatched&apos; ||
TEXT(StatusCategory) = &apos;In Progress&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOpen</label>
    <type>Checkbox</type>
</CustomField>