force-app/main/default/objects/ServiceAppointment/fields/IsPending__c.field-meta.xml
<CustomField>
    <fullName>IsPending__c</fullName>
    <formula>TEXT(StatusCategory) = &apos;None&apos; || 
TEXT(StatusCategory) = &apos;Scheduled&apos; ||
TEXT(StatusCategory) = &apos;Dispatched&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPending</label>
    <type>Checkbox</type>
</CustomField>