force-app/main/default/objects/ServiceAppointment/fields/isPest__c.field-meta.xml
<CustomField>
    <fullName>isPest__c</fullName>
    <formula>TEXT( Line_Of_Business__c ) = $Setup.Field_Service_Settings__c.Pest_LOB__c 
&amp;&amp; NOT(isInstallation__c) 
&amp;&amp; NOT(isDelivery__c) 
&amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Follow-Up&quot;))
&amp;&amp; NOT(FSL__Emergency__c)

/*EN - Mar 03, 2019: added &amp;&amp; &quot;NOT(FSL__Emergency__c)&quot;*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPest</label>
    <type>Checkbox</type>
</CustomField>