force-app/main/default/objects/ServiceAppointment/fields/IsSchedStartGreater__c.field-meta.xml
<CustomField>
    <fullName>IsSchedStartGreater__c</fullName>
    <formula>IF(( SchedStartTime  &gt;  SchedEndTime ) , true, false)</formula>
    <label>IsSchedStartGreater</label>
    <type>Checkbox</type>
</CustomField>