force-app/main/default/objects/ServiceAppointment/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Life Safety</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>