force-app/main/default/objects/ServiceAppointment/fields/MAQuality__c.field-meta.xml
<CustomField>
    <fullName>MAQuality__c</fullName>
    <label>Quality (MapAnything)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>