force-app/main/default/objects/ServiceAppointment/fields/MAVerifiedLatitude__c.field-meta.xml
<CustomField>
    <fullName>MAVerifiedLatitude__c</fullName>
    <label>Verified Latitude (MapAnything)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>