force-app/main/default/objects/ServiceAppointment/fields/Notification_Language_Locale_Key__c.field-meta.xml
<CustomField>
    <fullName>Notification_Language_Locale_Key__c</fullName>
    <description>Language used in 24/48 notification emails</description>
    <label>Notification Language Locale Key</label>
    <length>5</length>
    <type>Text</type>
</CustomField>