force-app/main/default/objects/ServiceAppointment/fields/Owner_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Owner_IsActive__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner: IsActive</label>
    <type>Checkbox</type>
</CustomField>