force-app/main/default/objects/ServiceAppointment/fields/Packing_Slip_Last_Printed__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slip_Last_Printed__c</fullName>
    <description>The date this service appointment was last extracted and selected for packing slip PDF email/print.</description>
    <label>Packing Slip Last Printed</label>
    <type>Date</type>
</CustomField>