force-app/main/default/objects/ServiceAppointment/fields/Packing_Slip_Last_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slip_Last_Scheduled__c</fullName>
    <description>The schedule date when this service appointment was last extracted and selected for packing slip PDF email/print.</description>
    <label>Packing Slip Last Scheduled</label>
    <type>Date</type>
</CustomField>