force-app/main/default/objects/ServiceAppointment/fields/Pest_Emergency_Dedicated_Count__c.field-meta.xml
<CustomField>
    <fullName>Pest_Emergency_Dedicated_Count__c</fullName>
    <label>Pest Emergency Dedicated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>