force-app/main/default/objects/ServiceAppointment/fields/Pest_Emergency_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Pest_Emergency_Notification_Date_Time__c</fullName>
    <label>Pest Emergency Notification Date/Time</label>
    <type>DateTime</type>
</CustomField>