force-app/main/default/objects/ServiceAppointment/fields/Require_24_Hour_Notification__c.field-meta.xml
<CustomField>
    <fullName>Require_24_Hour_Notification__c</fullName>
    <formula>ISPICKVAL(Account__r.Email_Notification_Options__c, &apos;24 Hours&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Require 24 Hour Notification</label>
    <type>Checkbox</type>
</CustomField>