force-app/main/default/objects/ServiceAppointment/fields/Require_48_Hour_Notification__c.field-meta.xml
<CustomField>
    <fullName>Require_48_Hour_Notification__c</fullName>
    <formula>ISPICKVAL(Account__r.Email_Notification_Options__c, &apos;48 Hours&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Require 48 Hour Notification</label>
    <type>Checkbox</type>
</CustomField>