force-app/main/default/objects/ServiceAppointment/fields/Reschedule_Counter__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Counter__c</fullName>
    <label>Reschedule Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>