force-app/main/default/objects/ServiceAppointment/fields/SA_Completion_Date_Compliance__c.field-meta.xml
<CustomField>
    <fullName>SA_Completion_Date_Compliance__c</fullName>
    <formula>SchedEndTime  &lt;&gt;  ActualEndTime</formula>
    <label>SA Completion Date Compliance</label>
    <type>Checkbox</type>
</CustomField>