force-app/main/default/objects/ServiceAppointment/fields/Same_Day_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Appointment__c</fullName>
    <formula>DATEVALUE(SchedStartTime) = DATEVALUE(SchedEndTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Day Appointment</label>
    <type>Checkbox</type>
</CustomField>