force-app/main/default/objects/ServiceAppointment/fields/Scanned_Out__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Out__c</fullName>
    <label>Scanned Out</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>