force-app/main/default/objects/ServiceAppointment/fields/SchedEndTimeValue__c.field-meta.xml
<CustomField>
    <fullName>SchedEndTimeValue__c</fullName>
    <formula>TIMEVALUE( SchedEndTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SchedEndTimeValue</label>
    <type>Time</type>
</CustomField>