force-app/main/default/objects/ServiceAppointment/fields/Schedule_Duration__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Duration__c</fullName>
    <formula>SchedEndTime - SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>