force-app/main/default/objects/ServiceAppointment/fields/Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Date__c</fullName>
    <label>Scheduled Start Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>