force-app/main/default/objects/ServiceAppointment/fields/Scheduled_Time_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time_Number_Formula__c</fullName>
    <formula>VALUE ( LEFT(TEXT(ScheduledStartTimeValue__c), 2) ) * 100 + VALUE ( MID(TEXT(ScheduledStartTimeValue__c), 4, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Time Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>