force-app/main/default/objects/ServiceAppointment/fields/ScheduledStartTimeValue__c.field-meta.xml
<CustomField>
    <fullName>ScheduledStartTimeValue__c</fullName>
    <formula>TIMEVALUE( SchedStartTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduledStartTimeValue</label>
    <type>Time</type>
</CustomField>