force-app/main/default/objects/ServiceAppointment/fields/Send_Pest_Emergency_Dispatch_Not__c.field-meta.xml
<CustomField>
    <fullName>Send_Pest_Emergency_Dispatch_Not__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Pest Emergency Dispatch Not.</label>
    <type>Checkbox</type>
</CustomField>