force-app/main/default/objects/ServiceAppointment/fields/Serviced_By__c.field-meta.xml
<CustomField>
    <fullName>Serviced_By__c</fullName>
    <label>Service Technician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>