force-app/main/default/objects/ServiceAppointment/fields/ServiceReportAlreadySent__c.field-meta.xml
<CustomField>
    <fullName>ServiceReportAlreadySent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiceReportAlreadySent</label>
    <type>Checkbox</type>
</CustomField>