force-app/main/default/objects/ServiceAppointment/fields/ServiceResourceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceResourceId__c</fullName>
    <label>ServiceResourceId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>