force-app/main/default/objects/ServiceAppointment/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Account__r.Shipping_Address__c</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>