force-app/main/default/objects/ServiceAppointment/fields/Should_Auto_Send_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Should_Auto_Send_Service_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should Auto Send Service Report</label>
    <type>Checkbox</type>
</CustomField>