force-app/main/default/objects/ServiceAppointment/fields/Signature_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Signature_Compliance__c</fullName>
    <formula>NOT(Is_Signature_Required__c ) || (Is_Signature_Required__c &amp;&amp;  Customer_Signature_Captured__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Compliance</label>
    <type>Checkbox</type>
</CustomField>