force-app/main/default/objects/ServiceAppointment/fields/Signature_Not_Captured_Reason__c.field-meta.xml
<CustomField>
    <fullName>Signature_Not_Captured_Reason__c</fullName>
    <label>Signature Not Captured Reason</label>
    <type>TextArea</type>
</CustomField>