force-app/main/default/objects/ServiceAppointment/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <description>field is deprecated</description>
    <formula>Account__r.Site_Survey__r.Signature_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Required Deprecated</label>
    <type>Checkbox</type>
</CustomField>