force-app/main/default/objects/ServiceAppointment/fields/Status_UnSync_WO_SA__c.field-meta.xml
<CustomField>
    <fullName>Status_UnSync_WO_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the Status_WO_SA field on the FSL mobile app should be used to Sync the status of Work Orders &amp; Service Appointments or not</description>
    <inlineHelpText>When checked, Changing the status of the Status or Status (WO/SA) fields on the Service Appointment will not sync the status of a WO &amp; SA</inlineHelpText>
    <label>Status UnSync (WO/SA)</label>
    <type>Checkbox</type>
</CustomField>