force-app/main/default/objects/ServiceAppointment/fields/Status_WO_SA__c.field-meta.xml
<CustomField>
    <fullName>Status_WO_SA__c</fullName>
    <description>Used to Sync Work Orders and Service Appointment status from the mobile FSL app</description>
    <label>Status (WO/SA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>On Route</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>