force-app/main/default/objects/ServiceAppointment/fields/Time_In_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Dispatched__c</fullName>
    <inlineHelpText>In Minutes</inlineHelpText>
    <label>Time In: Dispatched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>