force-app/main/default/objects/ServiceAppointment/fields/Time_In_OnRoute_InProgress__c.field-meta.xml
<CustomField>
    <fullName>Time_In_OnRoute_InProgress__c</fullName>
    <description>used to approximate actual duration for a service appoinment</description>
    <formula>Time_In_On_Site__c +  Time_In_In_Progress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time In: On Route + In Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>