force-app/main/default/objects/ServiceAppointment/fields/Time_Of_Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Last_Status_Change__c</fullName>
    <label>Time Of Last Status Change</label>
    <type>DateTime</type>
</CustomField>