force-app/main/default/objects/ServiceAppointment/fields/Trigger_Dispatch_notification__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Dispatch_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Dispatch notification?</label>
    <type>Checkbox</type>
</CustomField>