force-app/main/default/objects/ServiceAppointment/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>QA Service Appointment</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>