force-app/main/default/objects/ServiceAppointment/fields/Type_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Text_Formula__c</fullName>
    <formula>TEXT (Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type (Text Formula)</label>
    <type>Text</type>
</CustomField>