force-app/main/default/objects/ServiceAppointment/fields/VI_Brakes__c.field-meta.xml
<CustomField>
    <fullName>VI_Brakes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>Check if brakes passed the Pump test</inlineHelpText>
    <label>Brakes Passed Pump Test</label>
    <type>Checkbox</type>
</CustomField>